apps/actualbudget/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`budget.${DOMAIN}`)
      kind: Rule
      services:
        - name: actual-budget
          port: 80
          namespace: actual-budget
